# Imager.Plugins

./: .gitignore  README.md  meson.build
.github/workflows/: main.yml
DummyCamera/: meson.build
DummyCamera/ImagerPluginCore/: BaseCameraClass.cpp  ImageProcessingUtils.cpp  ImageProcessingUtils.h  StandardCameraProperties.h
DummyCamera/src/: DummyCamera.cpp  DummyCamera.h  DummyCameraPlugin.cpp  DummyCameraPlugin.h
DummyCamera/subprojects/: imagerplugincore.wrap
DummyEquipment/: meson.build
DummyEquipment/ImagerPluginCore/: CameraPropertiesEncoding.cpp  CameraPropertiesEncoding.h  DeviceTemplates.h  ImagerPlugin.cpp  PluginManager.cpp  PluginManager.h  RobotProgramArguments.h
DummyEquipment/src/: DummyEquipment.cpp  DummyEquipment.h  DummyEquipmentPlugin.cpp  DummyEquipmentPlugin.h
DummyEquipment/subprojects/: imagerplugincore.wrap
Lambda10B/: meson.build
Lambda10B/src/: Lambda10B.cpp  Lambda10B.h  Lambda10BPlugin.cpp  Lambda10BPlugin.h
MarzhauserTango/: meson.build
MarzhauserTango/src/: MarzhauserTango.cpp  MarzhauserTango.h  MarzhauserTangoPlugin.cpp  MarzhauserTangoPlugin.h
MicroscopeBody/: README.md
MicroscopeBody/include/OlympusIX83/: EventLog.h  xv_type.h
MicroscopeBody/lib/x64/: msl_pm.lib
MicroscopeBody/src/: BaseMicroscopeClass.cpp  DoNothingMicroscope.h  MicroscopeControlDLL.cpp  MicroscopeControlDLL.h  OlympusIX83.cpp  meson.build
MicrosocpeBody/src/: BaseMicroscopeClass.h  Config.h.in  DoNothingMicroscope.cpp  DummyMicroscope.cpp  DummyMicroscope.h  MicroscopeControlDLL.cpp  NikonTi1.cpp  NikonTi1.h  NikonTi2.cpp  NikonTi2.h  OlympusIX83.h  OlympusIX83Control.cpp  Utils.h  meson_options.txt
NikonTi2/: meson.build
NikonTi2/ImagerPluginCore/: BaseCameraClass.h  ImagerPlugin.cpp  PluginManager.h
NikonTi2/src/: NikonTi2.cpp  NikonTi2.h  NikonTi2Plugin.cpp  NikonTi2Plugin.h
NikonTi2/subprojects/: imagerplugincore.wrap
NikonTiE/: meson.build
NikonTiE/ImagerPluginCore/: CameraPropertiesEncoding.h  CameraUtils.h  PluginManager.cpp  RobotProgramArguments.cpp
NikonTiE/src/: NikonTiE.cpp  NikonTiE.h  NikonTiEPlugin.cpp  NikonTiEPlugin.h  Utils.h
OlympusIX83/: meson.build
OlympusIX83/ImagerPluginCore/: CameraUtils.cpp  DeviceTemplates.h  RobotProgramArguments.h  StandardCameraProperties.cpp
OlympusIX83/include/OlympusIX83/: mdk_if.h
OlympusIX83/src/: OlympusIX83.cpp  OlympusIX83.h  OlympusIX83Plugin.cpp  OlympusIX83Plugin.h
OlympusRTC/: README.md  meson.build
OlympusRTC/src/: OlympusRTC.cpp  OlympusRTC.h  OlympusRTCPlugin.cpp  RTC.cpp  RTC.h  RTCConnectionHandler.cpp  RTCConnectionHandler.h  SCMsgParsing.cpp  SCMsgParsing.h  meson.build
OmicronLedHub/: meson.build
OmicronLedHub/src/: OmicronLedHub.cpp  OmicronLedHub.h  OmicronLedHubPlugin.cpp  OmicronLedHubPlugin.h
OxxiusCombiner/: meson.build
OxxiusCombiner/src/: OxxiusCombiner.cpp  OxxiusCombiner.h  OxxiusCombinerPlugin.cpp  OxxiusCombinerPlugin.h
OxxiusCombiner/subprojects/: imagerplugincore.wrap
PriorProScanIII/: meson.build
PriorProScanIII/src/: PriorProScanIII.cpp  PriorProScanIII.h  PriorProScanIIIPlugin.cpp  PriorProScanIIIPlugin.h
PriorProScanIII/subprojects/: imagerplugincore.wrap
VisiTIRF/: README.md  meson.build
VisiTIRF/src/: VisiTIRF.cpp  VisiTIRF.h  VisiTIRFConnectionHandler.cpp  VisiTIRFConnectionHandler.h  VisiTIRFPlugin.cpp  VisiTIRFPlugin.h  meson.build
VisiTIRF/subprojects/: imagerplugincore.wrap
subprojects/: concurrentqueue.wrap  imagerplugincore.wrap  nlohmann_json.wrap  tomlplusplus.wrap
